Acceso al homologador

--- a/Generacion/Views/Login/Index.cshtml
+++ b/Generacion/Views/Login/Index.cshtml
@@ -45,6 +45,12 @@
                             }
                         </select>
                     </div>
+                    <div class="input">
+                        <select name="Company" class="form-select form-select-lg mb-3">
+                            <option value="Electrodunas">ELECTRO DUNAS S.A.A</option>
+                            <option value="Cantalloc">CANTALLOC S.A.C.</option>
+                        </select>
+                    </div>
                     <div class="input" aria-placeholder="">
                         <input type="submit" id="validar" name="button" value="Enviar" />
                     </div>
